<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resultados">

    <EditText
        android:id="@+id/editText_porGrasa"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="309dp"
        android:layout_marginLeft="309dp"
        android:layout_marginTop="203dp"
        android:contentDescription="@string/porGrasa"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_porGrasa"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_porGrasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="237dp"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="212dp"
        android:text="@string/porGrasa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_calorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="208dp"
        android:layout_marginTop="83dp"
        android:text="@string/calorias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_calorias"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="302dp"
        android:layout_marginLeft="302dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/calorias"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_calorias"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_kggrasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="237dp"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="142dp"
        android:text="@string/kgGrasa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="81dp"
        android:text="@string/imc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_imc"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="74dp"
        android:contentDescription="@string/imc"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_imc"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_kgGrasa"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="304dp"
        android:layout_marginLeft="304dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/kgGrasa"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_kggrasa"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_kgmusculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_kggrasa"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="-21dp"
        android:text="@string/kgMusculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_kgMusculo"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/kgMusculo"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_kgmusculo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_proteinadia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="211dp"
        android:text="@string/proteina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_proteina"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="201dp"
        android:contentDescription="@string/proteina"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_proteinadia"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="541dp"
        android:contentDescription="@string/button"
        android:onClick="Graficar_Chart"
        android:text="@string/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_pmejer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="356dp"
        android:contentDescription="@string/pocoejercicio"
        android:text="@string/pocoejercicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/paraMantener"
        android:text="@string/paraMantener"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_pmejerci"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="347dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_pmejer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="416dp"
        android:text="@string/tresacincodias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_pmtres"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="405dp"
        android:contentDescription="@string/tresacincodias"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="472dp"
        android:text="@string/seisasietedias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_pmseis"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="464dp"
        android:contentDescription="@string/seisasietedias"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="266dp"
        android:layout_marginLeft="266dp"
        android:layout_marginTop="299dp"
        android:contentDescription="@string/parabajar"
        android:text="@string/parabajar"
        app:layout_constraintStart_toEndOf="@+id/textView_titulo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_pbejerci"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="340dp"
        android:contentDescription="@string/pocoejercicio"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editText_pmejerci"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_pbtres"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="406dp"
        android:contentDescription="@string/tresacincodias"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editText_pmtres"
        app:layout_constraintTop_toBottomOf="@+id/editText_pbejerci" />

    <EditText
        android:id="@+id/editText_pbseis"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="461dp"
        android:contentDescription="@string/seisasietedias"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editText_pmseis"
        app:layout_constraintTop_toBottomOf="@+id/editText_pbtres" />

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="217dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/prueba" />


</RelativeLayout>